--- a/test/450-checker-types/build
+++ b/test/450-checker-types/build
@@ -20,4 +20,7 @@ export USE_JACK=false
 # Also disable desugar because it is missing in jack platform builds.
 export DESUGAR=false
 
+# See b/65168732
+export DX=dx
+
 ./default-build "$@"
