--- a/test/458-checker-instruct-simplification/build
+++ b/test/458-checker-instruct-simplification/build
@@ -20,4 +20,7 @@ export USE_JACK=false
 # Also disable desugar because it is missing in jack platform builds.
 export DESUGAR=false
 
+# See b/65168732
+export DX=dx
+
 ./default-build "$@"
