Grant artd CHOWN capability.
It is for transferring the ownership of compilation artifacts and
profile files to the system or apps.

Bug: 229268202
Test: adb shell pm art optimize-package -m speed-profile -f \
        com.google.android.youtube
Change-Id: I1f2effdffcf2684ad183608600097e15eb46d85a

--- a/artd/artd.rc
+++ b/artd/artd.rc
@@ -20,4 +20,4 @@ service artd /apex/com.android.art/bin/artd
     class core
     user artd
     group artd
-    capabilities DAC_OVERRIDE DAC_READ_SEARCH FOWNER
+    capabilities DAC_OVERRIDE DAC_READ_SEARCH FOWNER CHOWN
