Change artd log verbosity to DEBUG.
DEBUG logs, especially profman invocations, can be useful for debugging.
It's better to have them in the bugreport.

Bug: 177273468
Test: See DEBUG logs in logcat.
Change-Id: I53e7a34740b25d8573d7f3434066248c05590631

--- a/artd/artd.rc
+++ b/artd/artd.rc
@@ -21,3 +21,4 @@ service artd /apex/com.android.art/bin/artd
     user artd
     group artd
     capabilities DAC_OVERRIDE DAC_READ_SEARCH FOWNER CHOWN
+    setenv ANDROID_LOG_TAGS "*:d"
